# aerospike.acl

./: .gitignore  CODEOWNERS  README.md  dev-requirements.txt  galaxy.yml  makefile  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: build-test.yaml  release.yaml
ansible/collections/ansible_collections/aerospike/acl/: dev-requirements.txt  makefile  pytest.ini
ansible/collections/ansible_collections/aerospike/acl/.github/workflows/: build-test.yaml  release.yaml
ansible/collections/ansible_collections/aerospike/acl/plugins/module_utils/: acl_common.py
ansible/collections/ansible_collections/aerospike/acl/plugins/modules/: roles.py  users.py
ansible/collections/ansible_collections/aerospike/acl/test_config/: aerospike.conf
ansible/collections/ansible_collections/aerospike/acl/tests/unit/plugins/modules/: test_acl_common.py  test_roles.py  test_users.py
ansible/collections/ansible_collections/aerospike/acl/tools/: describe-version
plugins/module_utils/: acl_common.py
plugins/modules/: roles.py  users.py
test_config/: args-roles.json  args-users.json  astools.conf  test_play.yml
tests/unit/plugins/modules/: test_acl_common.py  test_roles.py  test_users.py
