[tool.poetry]
name = "db-user-management"
version = "0.1.0"
description = "Aerospike DB user management"
authors = ["Aerospike Managed Customer Services <managedservices@aerospike.com>"]
readme = "README.md"
packages = [
    { include = "test", format="sdist" },
    { include = "dbusermanagement", from = "src" }
]

[tool.poetry.dependencies]
python = ">= 3.6.2, <4"
pytest          = { version =   "^6.2", optional = true }
pytest-cov      = { version = "^3.0.0", optional = true }
pytest-flakes   = { version = "^4.0.5", optional = true }

[tool.poetry.dev-dependencies]
black = "^22.1.0"
tox = "^3.24.5"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
test = [ "pytest", "pytest-coverage", "pytest-flakes" ]
